# Terraform-CDK

./: README.md  cdktf.json  pyproject.toml
.devcontainer/a1a_infra_base/: devcontainer.json
docs/source/: conf.py  index.rst
src/terraform_cdk/: __init__.py  __main__.py
src/terraform_cdk/constructs/: ABC.py
src/terraform_cdk/constructs/level0/: management_lock.py  resource_group.py  storage_account.py  storage_container.py
src/terraform_cdk/constructs/level1/: storage.py
src/terraform_cdk/constructs/level2/: data_lake.py
src/terraform_cdk/stacks/: ABC.py  lake_house.py  terraform_backend.py
tests/: test_file.py
tests/constructs/level0/: test_management_lock.py  test_resource_group.py  test_storage_account.py  test_storage_container.py
tests/stacks/: test_terraform_backend.py
